test_files/netlist_cmp/valid/valid_case_09_b.net
R9 NODEA 0 5k
I7 0 NODEA 1m
.op
.backanno
.end
