test_files/netlist_cmp/invalid/invalid_case_09_b.net
I1 0 N001 2m
R1 N001 0 5k
.op
.backanno
.end
